Do not keep RepoZ alive in macOS

--- a/_ref/macOS/net.sodacore.RepoZ.plist
+++ b/_ref/macOS/net.sodacore.RepoZ.plist
@@ -5,7 +5,7 @@
 	<key>Disabled</key>
 	<false/>
 	<key>KeepAlive</key>
-	<true/>
+	<false/>
 	<key>Label</key>
 	<string>net.sodacore.RepoZ</string>
 	<key>LimitLoadToSessionType</key>
