--- a/grr/Properties/launchSettings.json
+++ b/grr/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "grr": {
       "commandName": "Project",
-      "commandLineArgs": "list *"
+      "commandLineArgs": "cd -"
     }
   }
 }
