--- a/grr/grr.csproj
+++ b/grr/grr.csproj
@@ -9,7 +9,8 @@
     <PackageProjectUrl>https://github.com/awaescher/RepoZ</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/awaescher/RepoZ/master/grr/grr.ico</PackageIconUrl>
     <RepositoryUrl>https://github.com/awaescher/RepoZ</RepositoryUrl>
-    <ReleaseVersion>4.0</ReleaseVersion>
+    <ReleaseVersion>1.0</ReleaseVersion>
+    <Version>1.0.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
