--- a/grrui/grrui.csproj
+++ b/grrui/grrui.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <ReleaseVersion>4.0</ReleaseVersion>
+    <ReleaseVersion>1.0</ReleaseVersion>
+    <Version>1.0.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
