--- a/Specs/packages.config
+++ b/Specs/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AsyncIO" version="0.1.26.0" targetFramework="net461" />
   <package id="Castle.Core" version="4.3.1" targetFramework="net461" />
   <package id="FluentAssertions" version="4.19.3" targetFramework="net461" />
   <package id="LibGit2Sharp" version="0.24.0" targetFramework="net461" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.185" targetFramework="net461" />
   <package id="Moq" version="4.10.1" targetFramework="net461" />
+  <package id="NetMQ" version="4.0.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.7.1" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
