--- a/RepoZ.App.Mac/RepoZ.App.Mac.csproj
+++ b/RepoZ.App.Mac/RepoZ.App.Mac.csproj
@@ -13,6 +13,7 @@
     <UseXamMacFullFramework>true</UseXamMacFullFramework>
     <ReleaseVersion>4.0</ReleaseVersion>
     <ApplicationIcon>..\_res\App.ico</ApplicationIcon>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -66,12 +67,6 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="AsyncIO">
-      <HintPath>..\packages\AsyncIO.0.1.26.0\lib\net40\AsyncIO.dll</HintPath>
-    </Reference>
-    <Reference Include="NetMQ">
-      <HintPath>..\packages\NetMQ.4.0.0.1\lib\net40\NetMQ.dll</HintPath>
-    </Reference>
     <Reference Include="System.ServiceModel" />
   </ItemGroup>
   <ItemGroup>
@@ -125,9 +120,6 @@
     <Compile Include="Controls\ZTableView.cs" />
     <Compile Include="StringCommandHandler.cs" />
     <Compile Include="TinyIoC.cs" />
-    <Compile Include="..\RepoZ.Ipc\RepoZIpcEndpoint.cs">
-      <Link>RepoZIpcEndpoint.cs</Link>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="PopupView.xib" />
@@ -145,6 +137,10 @@
     <ProjectReference Include="..\RepoZ.Api.Mac\RepoZ.Api.Mac.csproj">
       <Project>{A314F9CB-5108-4065-AFB6-42799099B188}</Project>
       <Name>RepoZ.Api.Mac</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RepoZ.Ipc\RepoZ.Ipc.csproj">
+      <Project>{49AD5E2A-E0E6-40CC-84A6-34DA81D93311}</Project>
+      <Name>RepoZ.Ipc</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
