--- a/RepoZ.Api/RepoZ.Api.csproj
+++ b/RepoZ.Api/RepoZ.Api.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+	<ReleaseVersion>1.0</ReleaseVersion>
+    <Version>1.0.0.0</Version>
   </PropertyGroup>
 
 </Project>
