--- a/RepoZ.App.Win/packages.config
+++ b/RepoZ.App.Win/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AsyncIO" version="0.1.26.0" targetFramework="net461" />
+  <package id="FluentWPF" version="0.6.1" targetFramework="net461" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net461" />
   <package id="LibGit2Sharp" version="0.26.0" targetFramework="net461" />
   <package id="LibGit2Sharp.NativeBinaries" version="2.0.267" targetFramework="net461" />
