--- a/RepoZ.App.Mac/packages.config
+++ b/RepoZ.App.Mac/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="LibGit2Sharp.NativeBinaries" version="1.0.165" targetFramework="net45" />
-  <package id="LibGit2Sharp.Portable" version="0.24.10" targetFramework="net45" />
+  <package id="LibGit2Sharp" version="0.25.4" targetFramework="xamarinmac20" />
+  <package id="LibGit2Sharp.NativeBinaries" version="1.0.252" targetFramework="xamarinmac20" />
   <package id="TinyIoC" version="1.3" targetFramework="net45" developmentDependency="true" />
 </packages>
