--- a/RepoZ.App.Win/RepoZ.App.Win.csproj
+++ b/RepoZ.App.Win/RepoZ.App.Win.csproj
@@ -81,6 +81,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -100,7 +101,9 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AcrylicHelper.cs" />
     <Compile Include="AutoStart.cs" />
+    <Compile Include="Controls\AcrylicContextMenu.cs" />
     <Compile Include="Controls\ZTextBox.cs" />
     <Compile Include="Converters\UtcToHumanizedLocalDateTimeConverter.cs" />
     <Compile Include="Converters\UtcToLocalDateTimeConverter.cs" />
@@ -108,6 +111,7 @@
     <Compile Include="MainWindowPageModel.cs" />
     <Compile Include="NotifyIconViewModel.cs" />
     <Compile Include="TinySoup.cs" />
+    <Compile Include="WindowsCompositionHelper.cs" />
     <Compile Include="WpfThreadDispatcher.cs" />
     <Page Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
