Enable filter targets in grr and grrui

--- a/grrui/grrui.csproj
+++ b/grrui/grrui.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RepoZ.Api\RepoZ.Api.csproj" />
     <ProjectReference Include="..\RepoZ.Ipc\RepoZ.Ipc.csproj" />
   </ItemGroup>
 
