--- a/_setup/choco/RepoZ.nuspec
+++ b/_setup/choco/RepoZ.nuspec
@@ -8,15 +8,18 @@
     <owners>Andreas Wäscher</owners>
     <summary>A zero-conf git repository hub with Windows Explorer- &amp; CLI-enhancements</summary>
     <description>
-RepoZ provides a quick overview of the repositories on your development machine including their current branch and a short status information. It uses the git repositories on your machine to create an efficient navigation widget and makes sure you'll never loose track of your work along the way.
+RepoZ provides a quick overview of the git repositories on your development machine including their current branch and a short status information. It uses the repositories on your machine to create an efficient navigation widget and makes sure you'll never loose track of your work along the way.
 RepoZ will not compete with your favorite git clients: It's not about working within a repository, it's a new way to use all of your repositories to make your daily work easier.
 	</description>
     <projectUrl>https://github.com/awaescher/RepoZ</projectUrl>
     <packageSourceUrl>https://github.com/awaescher/RepoZ</packageSourceUrl>
+	<iconUrl>https://raw.githubusercontent.com/awaescher/RepoZ/master/_res/App.ico</iconUrl>
+	<releaseNotes>https://github.com/awaescher/RepoZ/releases</releaseNotes>
+	<licenseUrl>https://raw.githubusercontent.com/awaescher/RepoZ/master/LICENSE</licenseUrl>
     <tags>repoz grr grrui git repository</tags>
   </metadata>
   <files>
 	<file src="tools\**" target="tools" />
-    <file src="..\..\_output\win\RepoZ.{PRODUCT_VERSION}.Setup.exe" target="tools" />
+    <file src="..\..\_output\RepoZ {PRODUCT_VERSION} Setup.exe" target="tools" />
   </files>
 </package>
