Fix update button sizing on macOS

--- a/RepoZ.App.Mac/RepoZ.App.Mac.csproj
+++ b/RepoZ.App.Mac/RepoZ.App.Mac.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Controls\ZTableView.cs" />
     <Compile Include="StringCommandHandler.cs" />
     <Compile Include="TinyIoC.cs" />
+    <Compile Include="GeometryHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="PopupView.xib" />
