--- a/RepoZ.Api.Mac/RepoZ.Api.Mac.csproj
+++ b/RepoZ.Api.Mac/RepoZ.Api.Mac.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <ReleaseVersion>1.0</ReleaseVersion>
+    <ReleaseVersion>4.0</ReleaseVersion>
     <Version>1.0.0.0</Version>
   </PropertyGroup>
 
@@ -14,5 +14,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RepoZ.Api\RepoZ.Api.csproj" />
+    <ProjectReference Include="..\RepoZ.Api.Common\RepoZ.Api.Common.csproj" />
   </ItemGroup>
 </Project>
