--- a/grr/grr.csproj
+++ b/grr/grr.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <Authors>Andreas Wäscher</Authors>
     <Product>Git Repositories of RepoZ</Product>
     <Description>Command line interface to query repository information from RepoZ</Description>
