--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FluentAssertions" version="5.10.0" targetFramework="net461" />
+  <package id="FluentAssertions" version="5.10.3" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
-  <package id="NUnit3TestAdapter" version="3.15.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net461" developmentDependency="true" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
