Slightly improve the help text

--- a/RepoZ.App.Mac/RepoZ.App.Mac.csproj
+++ b/RepoZ.App.Mac/RepoZ.App.Mac.csproj
@@ -136,6 +136,7 @@
     <Compile Include="TinyIoC.cs" />
     <Compile Include="GeometryHelper.cs" />
     <Compile Include="i18n\ResourceDictionaryTranslationService.cs" />
+    <Compile Include="Controls\CheckableMenuItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="PopupView.xib" />
